[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyagent_smith"
version = "0.1.0"
description = "Implementation of Langchain Agent with web search, crawling, and LangSmith observability"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Pavol Mulinka"}
]
keywords = ["langchain", "agent", "llm", "langsmith", "ollama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-ollama>=0.1.0",
    "langsmith>=0.1.0",
    "langgraph-cli[inmem]",
    "ddgs>=0.1.0",
    "crawl4ai>=0.3.0",
    "playwright>=1.40.0",
    "pydantic>=2.0.0",
    "ipykernel>=6.0.0",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
    "pandas>=2.0.0",
    "json5>=0.9.0",
    "urllib3>=2.0.0",
    "requests>=2.31.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/pablito/pyagent-smith"
Repository = "https://github.com/pablito/pyagent-smith"
Issues = "https://github.com/pablito/pyagent-smith/issues"

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.package-data]
pyagent_smith = ["config.json"]
